running nn on model

--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "[34299 rows x 114 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1665,7 @@
        "[34299 rows x 117 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
        "Name: IS_SUCCESSFUL, Length: 34299, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2141,7 @@
        "[34299 rows x 116 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2216,12 +2216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the the number of inputs (features) to the model\n",
-    "number_input_features = # YOUR CODE HERE\n",
+    "number_input_features = 116\n",
     "\n",
     "# Review the number of features\n",
     "number_input_features\n"
@@ -2229,22 +2240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons = # YOUR CODE HERE"
+    "number_output_neurons = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1 =  # YOUR CODE HERE\n",
+    "hidden_nodes_layer1 =  8\n",
     "\n",
     "# Review the number hidden nodes in the first layer\n",
     "hidden_nodes_layer1\n"
@@ -2252,12 +2274,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the second hidden layer\n",
-    "hidden_nodes_layer2 =  # YOUR CODE HERE\n",
+    "hidden_nodes_layer2 =  4\n",
     "\n",
     "# Review the number hidden nodes in the second layer\n",
     "hidden_nodes_layer2\n"
@@ -2265,52 +2298,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn = # YOUR CODE HERE\n"
+    "nn = Sequential()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the first hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the second hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=hidden_nodes_layer2, input_dim=number_input_features, activation=\"relu\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the output layer to the model specifying the number of output neurons and activation function\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=number_output_neurons, activation=\"linear\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_3 (Dense)             (None, 8)                 936       \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 4)                 36        \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 2)                 10        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 982\n",
+      "Trainable params: 982\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the Sequential model summary\n",
-    "# YOUR CODE HERE\n"
+    "nn.summary()"
    ]
   },
   {
@@ -2322,22 +2377,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "# YOUR CODE HERE\n"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 1.8554 - accuracy: 0.5596\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 1.0811 - accuracy: 0.6211\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.9789 - accuracy: 0.6312\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.9485 - accuracy: 0.6616\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.9038 - accuracy: 0.6248\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.8643 - accuracy: 0.5925\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 5s 7ms/step - loss: 0.8459 - accuracy: 0.5524\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.8467 - accuracy: 0.5840\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.8341 - accuracy: 0.5494\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.8268 - accuracy: 0.4929\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.8197 - accuracy: 0.4728\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.8116 - accuracy: 0.4199\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.8100 - accuracy: 0.4864\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.8014 - accuracy: 0.4793\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.8019 - accuracy: 0.4785\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.8030 - accuracy: 0.4551\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.7915 - accuracy: 0.3929\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.7934 - accuracy: 0.3712\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.7985 - accuracy: 0.3545\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.7590 - accuracy: 0.4820\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.7587 - accuracy: 0.4205\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.7046 - accuracy: 0.4488\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 8s 10ms/step - loss: 0.6741 - accuracy: 0.4482\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 7s 8ms/step - loss: 0.6662 - accuracy: 0.3821\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.6515 - accuracy: 0.4124\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.6561 - accuracy: 0.3975\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.6555 - accuracy: 0.4579\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 5s 7ms/step - loss: 0.6666 - accuracy: 0.5847\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.6896 - accuracy: 0.3690\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6815 - accuracy: 0.4758\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6798 - accuracy: 0.3493\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6768 - accuracy: 0.5220\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6721 - accuracy: 0.5763\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6695 - accuracy: 0.5386\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6657 - accuracy: 0.4561\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6582 - accuracy: 0.4237\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6197 - accuracy: 0.4598\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.5841 - accuracy: 0.4138\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5874 - accuracy: 0.3612\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.5857 - accuracy: 0.3543\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.5869 - accuracy: 0.5079\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.6072 - accuracy: 0.4974\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.5961 - accuracy: 0.3856\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.5899 - accuracy: 0.3338\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5966 - accuracy: 0.4326\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.6108 - accuracy: 0.3898\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5856 - accuracy: 0.5373\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 6s 7ms/step - loss: 0.5809 - accuracy: 0.6424\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5787 - accuracy: 0.6595\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 6s 8ms/step - loss: 0.5754 - accuracy: 0.5864\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model using 50 epochs and the training data\n",
-    "# YOUR CODE HERE\n"
+    "model = nn.fit(X_train_scaled, y_train, epochs=50)"
    ]
   },
   {
@@ -2349,12 +2511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "804/804 - 4s - loss: 0.5732 - accuracy: 0.7101 - 4s/epoch - 5ms/step\n",
+      "Loss: 0.573212206363678, Accuracy: 0.7100762128829956\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn.evaluate(\n",
+    "    X_train_scaled, y_train, verbose=2\n",
+    ")\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -2369,15 +2542,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the model's file path\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_path = \"./Resources/model.hdf5\"\n",
     "\n",
     "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "nn.save_weights(file_path)"
    ]
   },
   {
